# predator-prey

./: Cargo.toml  LICENSE  README.md  Settings.toml
.cargo/: config.toml
src/: main.rs  position_systems.rs
