[package]
name = "predator-prey"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_egui = "0.32.0"
config = "0.14.1"
egui = "0.30.0"
egui_plot = "0.30.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
